traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:19: error: not found: value compt
      ecritMessage(compt)
                   ^TraversalByColumn:20: error: not found: value compt
      compt = compt + 1;
      ^